--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>MistressRun</artifactId>
 	<packaging>jar</packaging>
 	<version>1.0-SNAPSHOT</version>
-	<name>TacticalRivals</name>
+	<name>MistressRun</name>
 	<url>http://maven.apache.org</url>
 	
 	<properties>
